2012-07-05  Dirk Eddelbuettel  <edd@dexter>

	* DESCRIPTION (Version): Version 0.0.2

	* src/cnpyMod.cpp: Added transpose() method to transparently deal
	with the Fortran-vs-C storage order difference between Python and R.
	Also added support for reading vectors.

	* src/cnpy.{cpp,h}: Added support for loading from .npy.gz files
	which is automagically enabled if the filename ends in ".gz"

2012-07-04  Dirk Eddelbuettel  <edd@debian.org>

	* Initial version 0.0.1

	* src/cnpy.{cpp,h}: Numerous minor changes to conform to CRAN Policy

	* src/cnpyMod.cpp: Rcpp modules wrapping of two function npyLoad and
	npySave which work on one- and two-dimensional objects of integer or
	numeric type.  Note that Matrices need a transpose due to numpy
	Fortran ordering.